--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <img src="logo.jpg" class="profile-img" alt="Logo">
     <h1>Orangutans Backpacker</h1>
     <p>Guesthouse & Jungle trekking</p>
-    <a href="https://booking.com/orangutanbackpacker" class="link">Booking.com</a>
+    <a href="http://booking.com/orangutanbackpacker" class="link">Booking.com</a>
     <a href="https://api.whatsapp.com/send/?phone=6282284325189&text=Halo+Orangutan+backpacker.&type=phone_number&app_absent=0" class="link">WhatsApp</a>
     <a href="https://www.tiktok.com/@orangutans.backpacker" class="link">Tiktok</a>
     <a href="https://www.instagram.com/orangutan.backpacker?igsh=MXBtZTF3MXZpZDRqMQ==" class="link">Instagram</a>
